--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,25 @@
 
 .App-header {
   background-color: #fff;
+  display: flex;
+}
+
+.opcoes {
+  display: flex;
+}
+
+.opcao {
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  padding: 0 5px;
+  cursor: pointer;
+  min-width: 120px;
+}
+
+li {
+  list-style: none;
 }
