--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 .App-header {
   background-color: #fff;
   display: flex;
+  justify-content: center;
 }
 
 .opcoes {
@@ -27,4 +28,14 @@
 
 li {
   list-style: none;
+}
+
+.icones {
+  display: flex;
+  align-items: center;
+}
+
+.icone {
+  margin-right: 40px;
+  width: 25px;
 }
